# astral-trinity

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
src/: __init__.py  example.py
tests/: __init__.py  test_example.py
